clusters/cultural-repo-cluster/apps/cultural-repo/base/deployment-joai-project.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cultural-repo-joai-project
  namespace: default
spec:
  # replicas: 3
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: cultural-repo-joai-project
  template:
    metadata:
      labels:
        app: cultural-repo-joai-project
    spec:
      terminationGracePeriodSeconds: 30
      volumes:
        - name: media-volume-mount
          persistentVolumeClaim:
            claimName: cultural-repo-media-pvc
        - name: config-volume-mount
          persistentVolumeClaim:
            claimName: cultural-repo-joai-project-pvc
      imagePullSecrets:
        - name: gitlab-registry-credentials
      containers:
        - name: cultural-repo-joai-project
          image: registry.gitlab.com/panos.soilem/comic-registry/backend:1.0.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: media-volume-mount
              mountPath: /joai/data
              subPath: xml
            - name: config-volume-mount
              mountPath: /usr/local/tomcat/webapps/ROOT/WEB-INF/repository_settings_and_data
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 1200m
              memory: 3072Mi
            requests:
              cpu: 600m
              memory: 1024Mi
