clusters/cultural-repo-cluster/apps/cultural-repo/base/deployment-nginx-media.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-media-server
  namespace: default
spec:
  # replicas: 3
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: nginx-media-server
  template:
    metadata:
      labels:
        app: nginx-media-server
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
        - name: media-volume-mount
          persistentVolumeClaim:
            claimName: cultural-repo-media-pvc
        - name: config
          configMap:
            name: nginx-config
      containers:
        - name: nginx-media-server
          image: nginx:1.19.2-alpine
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/
              name: config
            - name: media-volume-mount
              mountPath: /usr/share/nginx/html
