clusters/cultural-repo-cluster/apps/cultural-repo/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: cultural-repo-service-backend
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: cultural-repo-backend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
