clusters/cultural-repo-cluster/apps/cultural-repo/base/service-joai-project.yaml
apiVersion: v1
kind: Service
metadata:
  name: cultural-repo-service-joai-project
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: cultural-repo-joai-project
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
