clusters/cultural-repo-cluster/apps/cultural-repo/base/service-nginx-media.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-media-server-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: nginx-media-server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
