clusters/cultural-repo-cluster/apps/cultural-repo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cultural-repo-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: cultural-repo
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
