clusters/cultural-repo-cluster/apps/cultural-repo/base/ingress-backend-wildcard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cultural-repo-ingress-backend-wildcard
  annotations:
    kubernetes.io/ingress.class: "traefik"    

    # cert
    cert-manager.io/cluster-issuer: "letsencrypt-hetzner-cluster-issuer"

    # rate limit
    traefik.ingress.kubernetes.io/max-conn-amount: "10" # connection per IP
    traefik.ingress.kubernetes.io/max-conn-extractor-func: client.ip # requests per minute per IP

    # https redirect
    # traefik.ingress.kubernetes.io/router.middlewares: soile-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
      - '*.soilekube.duckdns.org'
      secretName: cultural-repo-app-tls-backend-wildcard
  rules:
  - host: '*.soilekube.duckdns.org'
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cultural-repo-service-backend
              port:
                number: 80
