clusters/cultural-repo-cluster/apps/cultural-repo/base/ingress-joai-project.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cultural-repo-ingress-joai-project
  annotations:
    kubernetes.io/ingress.class: "traefik"    

    # cert
    # cert-manager.io/cluster-issuer: "letsencrypt-hetzner-cluster-issuer"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"

    # rate limit
    traefik.ingress.kubernetes.io/max-conn-amount: "10" # connection per IP
    traefik.ingress.kubernetes.io/max-conn-extractor-func: client.ip # requests per minute per IP

    # https redirect
    # traefik.ingress.kubernetes.io/router.middlewares: soile-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
      - soilekube.duckdns.org
      secretName: cultural-repo-app-tls-joai-project
  rules:
  - host: soilekube.duckdns.org
    http:
      paths:
        - path: /provider
          pathType: Prefix
          backend:
            service:
              name: cultural-repo-service-joai-project
              port:
                number: 80

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https-joai-project
spec:
  redirectScheme:
    scheme: https
    permanent: true

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-provider-joai-project
spec:
  redirectRegex:
    permanent: true
    regex: "^https://oai-pmh.repo.skopelos.gr[/]?$"
    replacement: "https://oai-pmh.repo.skopelos.gr/provider"
